# brainomics

./: .gitignore  README.md
2015/: Abstract_BrainomicsLocalizer.doc  Cover_Letter_BrainomicsLocalizer.doc  REVISION.txt  abstract_brainomics_localizer.doc  brainomics_localizer.bib  brainomics_localizer.tex  example.py  highlights_brainomics_localizer.doc  response_to_reviews_brainomics_localizer.doc  reviewer.txt  reviewer1.txt  reviewer2.txt  summary.tiff
2015/latex/: brainomics_localizer.bib  brainomics_localizer.tex  example.py  summary.tiff  ui1.tiff
bioresource/: README.md
bioresource/examples/: README.md
bioresource/import/: clean_and_build_db.sh  import_assessment.py  import_assessment_senior.py  import_ncbi.py  import_ncbi_part2.sh
bioresource/scripts/: check_snp_num.py  (+8 more)
db/: README.md  README.rst
imagen/: README.md
localizer/: README.md  README.rst  localizer-acquisition.py  localizer-acquisition.txt  localizer-grr.py  localizer-grr.txt  localizer-subjects.py  localizer-subjects.txt  localizer-subjects.xls
ml/: README.rst
mulm-gpu/: CMakeLists.txt  Makefile  README  linear_model.py  mu_corr_mapper.py  mu_corr_mapper_cuda.py  mu_corr_mapper_hybrid.py  utils.py
mulm-gpu/bench/: bench.py  bench_prace.py  example.py  example_data.py  generate_data.py  generate_data_2.py
mulm-gpu/extra/: auto_wf.sh  generate_workflow.py
mulm-gpu/include/: linear_model.h  mulm_regression.h  ols_regression.h
mulm-gpu/src/mu-corr/: linear_model.cu  linear_model.i
mulm-gpu/src/mu-ols/: linear_model_ols.cu  linear_model_ols.i
tools/: cubicweb_tool.py
(+137 files in other folders)
